# BasicsOfOpenGLLabs

./: .gitignore  README.md  egg-cameraMouseSpin.cpp  egg-light.cpp  egg-texture-mapping.cpp  egg.cpp  lab2-1.cpp  lab2-2.cpp  lab2-3.cpp  lab2-4.cpp  lab3-1.cpp  lab3-2.cpp  lab4-1.cpp  sierpinskiCarpet.cpp  teapot.cpp  tetrahedron-texture-mapping.cpp
WebGL/: index.html
WebGL/css/: style.css
WebGL/js/: main.js  matrix.js
grafika/: CMakeLists.txt  main.cpp
